Refatorado o código do cliente para passar a API key como parâmetro
